[package]
name = "vulkan-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
vulkano = "0.33.0"

[dependencies.sdl2]

version = "0.35"
optional = true

[features]
default = ["sdl2"]
sdl2 = ["dep:sdl2"]
