[package]
name = "vulkan-renderer"
version = "0.1.0"
edition = "2021"
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.49"
vulkano = "0.33.0"

[dependencies.sdl2]
version = "0.35"
optional = true

[dependencies.winit]
version = "0.28"
optional = true

[dependencies.vulkano-win]
version = "0.33.0"
optional = true

[features]
default = ["winit"]
# sdl2 = ["dep:sdl2"]
winit = ["dep:winit", "dep:vulkano-win"]
wayland = []
x11 = []

[[example]]
# Only for early development
name = "main"
required-features = ["default"]
